--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <span>Texto de prueba</span>
         </div>
 
+        <div id="msgSuccess" class="alert alert-success" role="success" style="display: none;">
+            <span>Texto de prueba</span>
+        </div>
+
         <div class="mb-3">
             <select id="tipoDocumento" name="tipoDocumento" class="form-select form-select-lg">
                 <option value="" selected>Tipo documento</option>
